# PyDk

./: .gitignore  Makefile  README.md  TODO.md  pyproject.toml  requirements.txt  setup.cfg
examples/: py_dk_custom_script.py
src/: py_dk_custom_facade.py
src/classes/: Offer.py  Product.py
src/client/: http_client_interface.py  http_x_client_adapter.py
src/client/httpx/: http_client_interface.py  http_x_client_adapter.py  httpx_error_handler.py
src/endpoint_implementation/: authenticate.py  correct_response.py  get_offer.py  register_product.py
src/exceptions/: httpx_adapter_client_exceptions.py
src/token_manager/: auth_client.py  cache_interface.py  memory_cache_adapter.py  sqlite_cache_adapter.py
src/utils/: correct_response.py
tests/: sdk_tests.py
