[metadata]
name = pydk-custom
version = 0.1.0
description = Async-first Python SDK for Applifting API communication
author = bartolomej.elias
author_email = bartas.elias@gmail.com
license = MIT

[options]
package_dir =
    = src
packages = find:
install_requires =
    httpx>=0.23
    pydantic>=2.0
    aiosqlite>=0.19
python_requires = >=3.10

[options.packages.find]
where = src
